<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AuthActivity"
    android:layoutDirection="locale"
    android:background="@color/colorPrimary" >

<!--    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay" >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@color/black_font"
            android:layoutDirection="locale"
            android:textDirection="locale"
            app:subtitleTextColor="@color/black_font"
            android:titleTextAppearance = "@color/black_font" />

    </android.support.design.widget.AppBarLayout>-->


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_container" >

        <ImageView
            android:id="@+id/welcome_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/app_logo"/>

        <Button
            android:id="@+id/btn_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_image"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_centerInParent="true"
            android:text="@string/language"
            android:fontFamily="@font/a_jannat_lt_bold"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:drawableTop="@drawable/ic_language_black_24dp"
             />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_language"
            android:layout_margin="@dimen/fab_margin"
            android:fontFamily="@font/a_jannat_lt_bold"
            android:gravity="center"
            android:text="@string/action_sign_in"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_margin="@dimen/fab_margin"
            android:fontFamily="@font/a_jannat_lt_bold"
            android:gravity="center"
            android:text="@string/action_new_register"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>